# lau-tropical-geometry-agents

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: convexity.rs  curves.rs  intersection.rs  lib.rs  linear_algebra.rs  newton.rs  optimization.rs  polynomial.rs  scheduling.rs  semiring.rs  tropicalization.rs
