[package]
name = "lau-tropical-geometry-agents"
version = "0.1.0"
edition = "2021"
description = "Tropical geometry for agents — where + becomes max and × becomes +"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-tropical-geometry-agents"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
